# ORAC

./: .gitignore  CLAUDE.local.md  CLAUDE.md  Cargo.toml  MASTER_INDEX.md  ORAC_MINDMAP.md  ORAC_PLAN.md  bacon.toml  plan.toml
.claude/: ALIGNMENT_VERIFICATION.md  anti_patterns.json  context.json  patterns.json  status.json
.claude/commands/: acp.md  atuin.md  bacon.md  battern.md  broadcast.md  compose.md  deploy-orac.md  fzf.md  gate.md  habitat-tensor.md  intel.md  lazygit.md  (+12 more)
ai_docs/: ANTI_PATTERNS.md  GOLD_STANDARD_PATTERNS.md  INDEX.md  QUICKSTART.md  SESSION_078_SYNTHEX_INTEGRATION_SCHEMATICS.md  SYNTHEX_THERMAL_ANALYSIS_2026-04-03.md
ai_specs/: API_SPEC.md  BRIDGE_SPEC.md  EVOLUTION_SPEC.md  HOOKS_SPEC.md  INDEX.md  WIRE_PROTOCOL_SPEC.md
benches/: field_computation.rs  hebbian_update.rs  hook_latency.rs
claude-code-env/: pyvenv.cfg
config/: bridges.toml  default.toml  dev.toml  hooks.toml  prod.toml
docs/: ACP_plan_review_adr_evidence.md  ACP_plan_review_glossary_sizing.md  ACP_plan_review_minimalist.md  ACP_plan_review_risk.md  ACP_plan_review_troubleshooting.md  ADR_INDEX.md  ADR_source_sessions.md  CONTRIBUTING.md  D1_SYSTEM_ATLAS.md  D2_ARCHITECTURAL_SCHEMATICS.md  D3_ENDPOINT_PROTOCOL_CATALOG.md  D4_BRIDGE_PIPELINE_WIRING.md  D5_CODE_FLOW_MAPS.md  D6_CAPACITY_LIMITS_REFERENCE.md  D7_MODULE_PURPOSE_GUIDE.md  D8_MERMAID_DIAGRAMS.md  EXECUTIVE_SUMMARY.md  GLOSSARY.md  OPERATIONS.md  PRODUCTION_READINESS.md  VERIFICATION_REPORT.md  V_L1a_m01_m02_m03.md  V_L1b_m04_m05_m06_field.md  V_L2_m07_m08_m09.md  V_L3_m10_m14.md  V_L4_m15_m21.md  V_L5_bridges.md  V_L6_coordination.md  V_L7_monitoring.md  V_L8_evolution.md  diagnostic_command_test.md
hooks/: orac-hook.sh
migrations/: 001_blackboard.sql
scripts/: fleet-star.sh  test-hook-server.py
src/: lib.rs
tests/: api_endpoints.rs  cross_layer_workflows.rs  l1_core_integration.rs  l2_wire_integration.rs  l3_hooks_integration.rs  l4_intelligence_integration.rs  l5_bridges_integration.rs  l6_coordination_integration.rs  l7_monitoring_integration.rs  l8_evolution_integration.rs  property_tests.rs  stress_test.rs
(+128 files in other folders)
