[package]
name = "orac-sidecar"
version = "0.6.0"
edition = "2021"
rust-version = "1.75"
description = "ORAC — Intelligent fleet coordination proxy with HTTP hooks, Hebbian STDP, and RALPH evolution"
authors = ["Louranicas <louranicas@github.com>"]
license = "MIT"

[workspace]

[[bin]]
name = "orac-sidecar"
path = "src/bin/main.rs"

[[bin]]
name = "orac-client"
path = "src/bin/client.rs"

[[bin]]
name = "orac-probe"
path = "src/bin/probe.rs"

[[bin]]
name = "ralph-bench"
path = "src/bin/ralph_bench.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"], optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
toml = { version = "0.8" }
thiserror = { version = "2" }
parking_lot = { version = "0.12" }
socket2 = { version = "0.5" }
ureq = { version = "2" }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
figment = { version = "0.10", features = ["toml", "env"] }
rusqlite = { version = "0.32", optional = true }
tower = { version = "0.5", optional = true }
opentelemetry = { version = "0.27", optional = true }
opentelemetry-otlp = { version = "0.27", optional = true }
dirs = { version = "6" }
libc = { version = "0.2" }

[dev-dependencies]
approx = "0.5"

[features]
default = ["api", "persistence", "bridges", "intelligence", "monitoring", "evolution"]
api = ["axum", "tower-http"]
persistence = ["rusqlite"]
bridges = []
intelligence = ["tower"]
monitoring = ["opentelemetry", "opentelemetry-otlp"]
evolution = []
full = ["api", "persistence", "bridges", "intelligence", "monitoring", "evolution"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
